--- a/PRJ_CRUD_SPRING_BOOT_MONGODB/src/main/resources/templates/formView.html
+++ b/PRJ_CRUD_SPRING_BOOT_MONGODB/src/main/resources/templates/formView.html
@@ -19,6 +19,7 @@
         <ul class="navbar-nav">
             <li class="nav-item active"><a class="nav-link" href="#">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" th:href="@{/listarCurso}">Cursos</a></li>
+            <li class="nav-item"><a class="nav-link" th:href="@{/listarAlumno}">Alumno</a></li>
         </ul>
     </div>
 </nav>
