--- a/PRJ_CRUD_SPRING_BOOT_MONGODB/src/main/resources/templates/listarView.html
+++ b/PRJ_CRUD_SPRING_BOOT_MONGODB/src/main/resources/templates/listarView.html
@@ -21,6 +21,7 @@
                 <span class="sr-only">(current)</span>
             </a></li>
             <li class="nav-item"><a class="nav-link" th:href="@{/listarCurso}">Cursos</a>
+            <li class="nav-item"><a class="nav-link" th:href="@{/listarAlumno}">Alumno</a></li>
             </li>
         </ul>
     </div>
